--- a/public/index.html
+++ b/public/index.html
@@ -48,4 +48,4 @@
         }
       }
     })
-  </script><title data-react-helmet="true"></title><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
+  </script><title data-react-helmet="true"></title><link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400&amp;display=swap" rel="stylesheet"/><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
